macros/tests/ui/unknown_sql_database_setup_field_key.rs
use easy_sql_macros::DatabaseSetup;

#[derive(DatabaseSetup)]
struct BadDatabaseSetupFieldAttr {
    #[sql(bytes)]
    table: i32,
}

fn main() {}
